--- a/repositories.conf
+++ b/repositories.conf
@@ -2,13 +2,13 @@
 # src custom file:///usr/src/openwrt/bin/ar71xx/packages
 
 ## Remote package repositories
-src/gz glinet_core http://fw.gl-inet.com/releases/kmod-3.1/ar71xx/x300b
-src/gz glinet_base http://fw.gl-inet.com/releases/packages-3.x/ar71xx/base
-src/gz glinet_gli_pub http://fw.gl-inet.com/releases/packages-3.x/ar71xx/gli_pub
-src/gz glinet_packages http://fw.gl-inet.com/releases/packages-3.x/ar71xx/packages
-src/gz glinet_luci http://fw.gl-inet.com/releases/packages-3.x/ar71xx/luci
-src/gz glinet_routing http://fw.gl-inet.com/releases/packages-3.x/ar71xx/routing
-src/gz glinet_telephony http://fw.gl-inet.com/releases/packages-3.x/ar71xx/telephony
+src/gz glinet_core http://fw.gl-inet.com/releases/v18.06.5/kmod-3.1/ar71xx/x300b
+src/gz glinet_base http://fw.gl-inet.com/releases/v18.06.5/packages-3.1/ar71xx/base
+src/gz glinet_gli_pub http://fw.gl-inet.com/releases/v18.06.5/packages-3.1/ar71xx/gli_pub
+src/gz glinet_packages http://fw.gl-inet.com/releases/v18.06.5/packages-3.1/ar71xx/packages
+src/gz glinet_luci http://fw.gl-inet.com/releases/v18.06.5/packages-3.1/ar71xx/luci
+src/gz glinet_routing http://fw.gl-inet.com/releases/v18.06.5/packages-3.1/ar71xx/routing
+src/gz glinet_telephony http://fw.gl-inet.com/releases/v18.06.5/packages-3.1/ar71xx/telephony
 
 ## This is the local package repository, do not remove!
 src imagebuilder file:packages
